--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ footer {
 
 .skill {
   padding: 0.75rem 1.5rem;
-  background-color: #00d4ff;
+  background-color: #03768d;
   border-radius: 20px;
   font-weight: 600;
   box-shadow: 0 1px 5px rgba(0,0,0,0.1);
