--- a/style.css
+++ b/style.css
@@ -109,12 +109,12 @@ footer {
   flex-wrap: wrap;
   gap: 1rem;
   margin-top: 1rem;
-  color: white;
+  color: #f0f9ff;
 }
 
 .skill {
   padding: 0.75rem 1.5rem;
-  background-color: #03768d;
+  background-color: #0369a1;
   border-radius: 20px;
   font-weight: 600;
   box-shadow: 0 1px 5px rgba(0,0,0,0.1);
