Updated project link styling and redirection

--- a/style.css
+++ b/style.css
@@ -119,3 +119,10 @@ footer {
   font-weight: 600;
   box-shadow: 0 1px 5px rgba(0,0,0,0.1);
 }
+
+.project-link {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+  flex: 1 1 45%;
+}
