--- a/style.css
+++ b/style.css
@@ -335,3 +335,12 @@ footer {
   border: none;
   z-index: 10000;
 }
+
+.hamburger span {
+  width: 25px;
+  height: 3px;
+  background: white;
+  display: block;
+  border-radius: 2px;
+  transition: 0.3s ease;
+}
